fixes-pre-overflow

--- a/main.css
+++ b/main.css
@@ -74,6 +74,7 @@ pre {
     line-height: 130%;
     margin-left: 10px;
     width: 95%;
+    overflow: auto;
 }
 
 
